[project]
name = "ci-test"
version = "1.0.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8,<2.0"

[tool.poetry]
package-mode = false
